--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html,body{
 
   header {
       margin-bottom: -5%;
-      margin-left: 25%;
+      margin-left: 21%;
       font-family: 'Bungee Shade', cursive;
       font-size: 30px;
       display: flex;
@@ -20,36 +20,60 @@ html,body{
       color: tomato;
   }
 
+ 
+
   .container{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    background-color: rgb(156, 156, 156); 
+    border: 1px solid rgb(156, 156, 156);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 500px;
+    width: 500px;
     
+   
   }
 
-  .cell {
-      background-color: white;
-    border: 1px solid rgba(128, 128, 128, 0.514);
-    min-width: 30px;
-    min-height: 30px;
-    display: inline-block;
+  .myStyle {
+      border-style: hidden;
+      color: turquoise;
   }
+   
+
+  .cell {
+    background-color: white;
+    border: 1px solid rgba(128, 128, 128, 0.514);
+    display: flex;
+    transition: 0.3s;
+    width:100%;
+    flex: 1;
+    flex-wrap: wrap;
+
+   
+  }
+
 
   .row {
       display: flex;
+      flex: 1;
+      width: 100%;
+      
   }
 
   .wrap {
-      background-color: tomato;
-      border-radius: 20px;
-      height: 550px;
-      width: 700px;
-      margin: 50px 550px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    background-color: tomato;
+    border-radius: 20px;
+    height: 650px;
+    width: 650px;
+    margin: 50px 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
   }
+
+  
 
   .gridpanel{
       background-color:rgba(253, 252, 251, 0.747);
@@ -62,6 +86,24 @@ html,body{
       height: 450px;
       position:absolute;
       
+  }
+
+  .slidecontainer{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+  }
+
+  
+
+
+  #size {
+      margin-bottom: 3%;
+      color: rgba(8, 8, 8, 0.801);
+      font-weight: bolder;
+      font-family: 'Indie Flower', cursive;
+      font-size: 30px;
   }
 
   button{
@@ -80,11 +122,11 @@ html,body{
 
   button:hover {
       transform: scale(0.9);
-      background-color: rgba(255, 99, 71, 0.356);
+      background-color: rgba(255, 99, 71, 0.836);
   }
 
   #rainbow {
-        margin-top: 40%;
+        margin-top: 15%;
         position: relative;
         background: linear-gradient(-45deg, #f03a3a,#e0e96b,#97f08a,#85a4f1,#c892f8);
         background-size: 400% 400%;
