--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ html,body{
       
   }
 
-  .slidecontainer{
+  .rangeslider{
       display: flex;
       justify-content: center;
       align-items: center;
